--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "dependencies": {
+    "axios": "^1.2.1",
     "express": "^4.18.2",
-    "serve-favicon": "^2.5.0"
+    "face-api.js": "^0.22.2",
+    "read-xml": "^3.0.0",
+    "request": "^2.88.2",
+    "serialport": "^10.5.0",
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^4.6.0",
+    "xml-js": "^1.6.11"
   }
 }
